--- a/Assignment/Views/AddressBooks/Create.cshtml
+++ b/Assignment/Views/AddressBooks/Create.cshtml
@@ -1,103 +1,107 @@
-﻿@model Assignment.Models.AddressBook
+﻿@model Assignment.ViewModels.AddressVM
 
 @{
     ViewData["Title"] = "Create";
 }
+@section Styles
+{
 
+    <link href="~/css/closeableToolTips.css" rel="stylesheet" / >
+
+}
 <span>page 1</span><hr />
-        <form action="/" method="post">
+        
             <div class="row">
-                <div class="col-md-12">
-                    
+                <div class="col-md-12">                    
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group row">
-                            <label asp-for="Title" class="control-label col-form-label-sm col-1 col-md-1 col-sm-1 col-lg-1 col-form-label text-right"></label>
+                            <label for="Title" class="control-label col-form-label-sm col-1 col-md-1 col-sm-1 col-lg-1 col-form-label text-right">Title</label>
                             <div class="col-md-5 col-sm-5 col-lg-5 col-5">
-                                <input asp-for="Title" class="form-control form-control-sm" />
-                                <span asp-validation-for="Title" class="text-danger"></span>
+                                <input id="Title"  class="form-control form-control-sm" />
+                                <span id="titleValidation" style="display:none" class="text-danger">Title is Required</span>
                             </div>
 
 
-                            <label asp-for="Address" class="control-label col-1 col-md-1 col-sm-1 col-lg-1 col-form-label col-form-label-sm text-right"></label>
+                            <label for="Address" class="control-label col-1 col-md-1 col-sm-1 col-lg-1 col-form-label col-form-label-sm text-right">Address</label>
                             <div class=" col-5 col-md-5 col-sm-5 col-lg-5">
-                                <input asp-for="Address" class="form-control form-control-sm" />
-                                <span asp-validation-for="Address" class="text-danger"></span>
+                                <input id="Address" class="form-control form-control-sm" />
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label asp-for="AddressTypeId" class="control-label col-1 col-md-1 col-sm-1 col-lg-1 col-form-label text-right col-form-label-sm"></label>
+                            <label for="AddressType" class="control-label col-1 col-md-1 col-sm-1 col-lg-1 col-form-label text-right col-form-label-sm">Type</label>
                             <div class=" col-11 col-md-11 col-sm-11 col-lg-11">
-                                <select asp-for="AddressTypeId" class="form-control form-control-sm select2" asp-items="ViewBag.AddressTypeId">
+                                <select id="AddressType" class="form-control form-control-sm select2" asp-items="ViewBag.AddressTypeId">
                                     <option selected disabled>Select Type</option>
                                 </select>
-                                <span asp-validation-for="AddressTypeId" class="text-danger"></span>
-
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label asp-for="Date" class="control-label col-1 col-md-1 col-sm-1 col-lg-1 col-form-label col-form-label-sm text-right"></label>
-                            <div class="col-2 col-md-2 col-sm-2 col-lg-2">
-                                <input type="date" asp-for="Date" class="form-control form-control-sm" />
-                                <span asp-validation-for="Date" class="text-danger"></span>
+                            <label for="Date" class="control-label col-1 col-md-1 col-sm-1 col-lg-1 col-form-label col-form-label-sm text-right">Date</label>
+                            <div class="col-3 col-md-3 col-sm-3 col-lg-3">
+                                <input type="date" id="Date" class="form-control form-control-sm" />
+                                <span id="dateValidation" style="display:none" class="text-danger">Date is Required</span>
                             </div>
 
-                            <label asp-for="Time" class="control-label col-form-label-sm col-1 col-md-1 col-sm-1 col-lg-1 col-form-label text-right"></label>
+                            <label for="Time" class="control-label col-form-label-sm col-1 col-md-1 col-sm-1 col-lg-1 col-form-label text-right">Time</label>
                             <div class="col-2 col-md-2 col-sm-2 col-lg-2">
-                                <input type="time" asp-for="Time" class="form-control form-control-sm" />
-                                <span asp-validation-for="Time" class="text-danger"></span>
+                                <input type="time" id="Time" class="form-control form-control-sm" />
+                                <span id="timeValidation" style="display:none" class="text-danger">Time is Required</span>
                             </div>
 
-                            <label asp-for="Remarks" class="control-label col-1 col-md-1 col-sm-1 col-lg-1 col-form-label col-form-label-sm text-right"></label>
+                            <label for="Remarks" class="control-label col-1 col-md-1 col-sm-1 col-lg-1 col-form-label col-form-label-sm text-right">Remarks</label>
                             <div class=" col-3 col-md-3 col-sm-3 col-lg-3">
-                                <input asp-for="Remarks" class="form-control form-control-sm" />
-                                <span asp-validation-for="Remarks" class="text-danger"></span>
+                                <input id="Remarks" class="form-control form-control-sm" />
                             </div>
                             <div class=" col-1 col-md-1 col-sm-1 col-lg-1 text-right">
                                 @*<input type="submit" value="Submit" class="btn btn-sm btn-primary" />*@
-                                <input type="button" id="addButton" value="Add" />
+                                <input class="btn-block" type="button" id="addButton" value="Add" />
                             </div>
                         </div>
                 </div>
             </div>
-
-            @*<div>
-<a asp-action="Index">Back to List</a>
-</div>*@
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="alert alert-secondary row">
-                        <span class="p-3 col-form-label control-label col-md-1">?</span>
-                        <div class="col-md-10">
-                            <input type="text" name="search" value="" class="form-control" />
+            <form asp-action="Create" method="post">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="alert alert-secondary row">
+                            
+                                <div >
+                                    <img data-toggle="tooltip" data-placement="top" title="Tooltip on top X" src="~/img/question.PNG" style="width:30px;" />
+                                </div>
+                            
+                            <div class="col-md-10">
+                                <input type="text" id="searchBox" class="form-control" />
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <table class="table table-bordered table-sm" id="myTable">
-                    <thead>
-                        <tr>
-                            <td>#</td>
-                            <td>Title</td>
-                            <td>Address</td>
-                            <td>Type</td>
-                            <td>Date</td>
-                            <td>Time</td>
-                            <td>Remarks</td>
-                            <td>Actions</td>
-                        </tr>
-                    </thead>
-                    <tbody id="tableBody">
-                    </tbody>
-                </table>
 
-            </div>
-            <div class="row">
-                <div class="col-md-12 text-right">
-                    <button class="btn btn-outline-info " id="finalSubmitBtn">Submit</button>
+                <div class="row">
+                    <table class="table table-bordered table-sm" id="myTable">
+                        <thead>
+                            <tr>
+                                <td>Title</td>
+                                <td>Address</td>
+                                <td>Type</td>
+                                <td>Date</td>
+                                <td>Time</td>
+                                <td>Remarks</td>
+                                <td>Actions</td>
+                            </tr>
+                        </thead>
+                        <tbody id="tableBody">
+                            
+                            
+                        </tbody>
+                    </table>
+
                 </div>
-            </div>
-        </form>
+
+                <div class="row">
+                    <div class="col-md-12 text-right">
+                        <button class="btn btn-outline-info " id="finalSubmitBtn">Submit</button>
+                    </div>
+                </div>
+            </form>
 
 
 @section Scripts {
@@ -105,19 +109,39 @@
 <script>
     $(document).ready(function () {
         $('#addButton').click(function () {
+            
             let title = $('#Title').val();
             let address = $('#Address').val();
-            let type = $('#AddressTypeId option:selected').text();            
+            let type = $('#AddressType option:selected').text();
+            let typeVal = $('#AddressType option:selected').val();
             let date = $('#Date').val();
             let time = $('#Time').val();
             let remarks = $('#Remarks').val();
-            if (title == '' || address == '' || date == '' || time == '') {
+            
+            if (title == '' || date == '' || time == '') {
                 let ms = $('#myForm').validate();
-                console.log(ms.dataset.valRequired);
-            }
+                if (title == '') {
+                    $('#titleValidation').css('display', 'block');
+                }
+                if (date == '') {
+                    $('#dateValidation').css('display', 'block');
+                }
+                if (time == '') {
+                    $('#timeValidation').css('display', 'block');
+                }
+            }            
             else {
-                let rowCount = $('#tableBody tr').length+1;
-                let tr = '<tr><td>' + rowCount + '</td><td>' + title + '</td><td>' + address + '</td><td>' + type + '</td><td>' + date + '</td><td>' + time + '</td><td>' + remarks + '</td><td><button class="btn btn-sm btn-danger gridRowDeleteBtn" >Delete</button></td></tr>';
+                //createRowForSubmit();
+                let index = $('#tableBody tr').length;
+                let titelTd = '<td><input type="hidden" name="AddressBooks['+index+'].Title"  value="' + title + '" />' + title + '</td>';
+                let addressTd = '<td><input type="hidden" name="AddressBooks[' + index +'].Address" value="' + address + '" />' + address + '</td>';
+                let typeTd = '<td><input type="hidden" name="AddressBooks[' + index +'].AddressTypeId" value="' + typeVal + '" />' + type + '</td>';
+                let dateTd = '<td><input type="hidden" name="AddressBooks[' + index +'].Date" value="' + date + '" />' + date + '</td>';
+                let timeTd = '<td><input type="hidden" name="AddressBooks[' + index +'].Time" value="' + time + '" />' + time + '</td>';
+                let remarksTd = '<td><input type="hidden" type="hidden" name="AddressBooks[' + index +'].Remarks" value="' + remarks + '" />' + remarks + '</td>';
+                let deleteTd = '<td class="btn btn-sm btn-danger gridRowDeleteBtn" >Delete</td>';
+
+                let tr = '<tr>' + titelTd + addressTd + typeTd + dateTd + timeTd + remarksTd + deleteTd+ '</tr>';
                 $('#tableBody').append(tr);
             }
             
@@ -127,13 +151,82 @@
             $('#Remarks').val("");
             $('#Address').val("");
 
-            $('.gridRowDeleteBtn').click(function () {
-                $(this).closest('tr').remove();
-            });
-            $('#finalSubmitBtn').click(function () {
-                $('#tableBody').empty();
-            });
+            
+            //$('#finalSubmitBtn').click(function () {
+            //    $('#tableBody').empty();
+            //});
         });
+
+        $('#Title').keypress(function () {
+            $('#titleValidation').css('display', 'none');
+        });
+        $('#Date').change(function () {
+            $('#dateValidation').css('display', 'none');
+        });
+        $('#Time').change(function () {
+            $('#timeValidation').css('display', 'none');
+        });
+        $("#myTable").on('click', '.gridRowDeleteBtn', function () {
+            $(this).closest('tr').remove();
+        });
+
+        //Code for Search
+        function searchByKey(searchKeyword) {
+            if (searchKeyword!='') {
+                $.ajax({
+                    url: '/AddressBooks/SearchByKeyword',
+                    data: { myKeyword: searchKeyword },
+                    method: 'POST',
+                    type: 'JSON',
+                    cache: false,
+                    success: function (data) {
+                        console.log(data);
+                        $('#tableBody').empty();
+                        $.each(data, function (i, obj) {
+                            console.log(obj);
+                            let titleCol = '<td>' + obj.title + '</td>';
+                            let addressCol = '<td>' + obj.address + '</td>';
+                            let addressTypeCol = '<td>' + obj.addressTypeId + '</td>';
+                            let dateCol = '<td>' + obj.date + '</td>';
+                            let timeCol = '<td>' + obj.time + '</td>';
+                            let remarksCol = '<td>' + obj.remarks + '</td>';
+                            let deleteTd = '<td class="btn btn-sm btn-danger gridRowDeleteBtn" >Delete</td>';
+                            let tr = '<tr>' + titleCol + addressCol + addressTypeCol + dateCol + timeCol + remarksCol + deleteTd + '</tr>';
+
+                            $('#tableBody').append(tr);
+                        });
+                        $("#myTable").on('click', '.gridRowDeleteBtn', function () {
+                            $(this).closest('tr').remove();
+                        });
+                    },
+                    error: function (err) {
+                        console.log(err);
+                    }
+                });
+            }
+            else {
+                $('#tableBody').empty();
+            }
+        };
+
+        $('#searchBox').on('keyup keypress keydown',function () {
+            let searchKeyword = $(this).val();
+            
+            searchByKey(searchKeyword);
+            
+        });
+
+        $('.tooltip').tooltipster({
+            interactive: true,
+            contentAsHTML: true,
+            interactiveTolerance: 300000
+        });
+
+        $(document).on('click', '.close', function () {
+            $('.tooltipster-base').hide();
+        });
+
     });
+    
 </script>
 }
