--- a/Assignment/Views/Home/Index.cshtml
+++ b/Assignment/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Assignment</h1>
+    <p>Online Technical Test for position of Frontend Engineer (asp.net)</p>
 </div>
