--- a/Assignment/Views/Shared/_Layout.cshtml
+++ b/Assignment/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -9,53 +12,31 @@
     <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
 
     <link href="~/lib/bootstrap/dist/css/select2-bootstrap4.css" rel="stylesheet" />
+    <link href="~/lib/fontawesome-iconpicker/css/fontawesome-iconpicker.min.css" rel="stylesheet" />
 
-    <style>
-        @@media (min-width: 576px) {
-            body {
-                font-size: 0.25rem;
-            }
-        }
+    @await RenderSectionAsync("Styles", required: false)
 
-        @@media (min-width: 768px) {
-            body {
-                font-size: 0.5rem;
-            }
-        }
-
-        @@media (min-width: 992px) {
-            body {
-                font-size: 0.75rem;
-            }
-        }
-
-        @@media (min-width: 1200px) {
-            body {
-                font-size: 1rem;
-            }
-        }
-    </style>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Assignment</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                    <partial name="_LoginPartial" />
-                </div>
+                @*<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            </li>
+                        </ul>
+                        <partial name="_LoginPartial" />
+                    </div>*@
             </div>
         </nav>
     </header>
@@ -68,15 +49,38 @@
                         @RenderBody()
                     </main>
                 </div>
-                <div class="col-md-3 h-100 vh-100 pr-4 absolute-wrapper" style="background: #d1ebac ">
-                    <div class="row vh-100 pt-5 pl-4" style="background:#b8f895">
-                        <ul>
+                <div class="col-md-3 h-100 vh-100 pr-4 absolute-wrapper" style="background: #E0DCB7 ">
+                    <div class="row vh-100 pt-5 pl-4 text-light" style="background: #A8A57C">
+                        <ul class="navbar-nav">
                             <li class="list-group"> <h3>Menu Bar</h3> </li>
                             <li class="list-group nav-item">
-                                <a asp-action="Create" asp-controller="AddressBooks" class="nav-link">Page 1</a>
+                                <a asp-action="Create" asp-controller="AddressBooks" class="nav-link text-light">Page 1</a>
                             </li>
                             <li class="list-group nav-item">
-                                <a asp-action="Index" asp-controller="AddressTypes" class="nav-link">Type</a>
+                                <a asp-action="Index" asp-controller="AddressTypes" class="nav-link text-light">Type</a><br />
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                            </li>
+
+                            @if (SignInManager.IsSignedIn(User))
+                            {
+                                <li class="nav-item">
+                                    <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                                        <button type="submit" class="nav-link btn btn-link text-danger font-weight-bold">Logout</button>
+                                    </form>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark font-weight-bold" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                                </li>
+                            }
+                            <li class="nav-item">
+                                <span>UTC:@DateTime.Now.ToString("hh:mm:ss tt dddd"),<br />@DateTime.Today.ToString("MMMM d, yyyy")</span><br />
+                                <span>LOCAL:@DateTime.Now.ToString("hh:mm:ss tt dddd"),<br />@DateTime.Today.ToString("MMMM d, yyyy")</span>
                             </li>
                         </ul>
                     </div>
@@ -95,18 +99,25 @@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/popper.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/fontawesome-iconpicker/js/fontawesome-iconpicker.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/select2/js/select2.full.js"></script>
     <script src="~/lib/select2/js/select2.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
     <script>
+        
         $(document).ready(function () {
             $(".select2").select2({
                 placeholder: "Select",
                 theme: "bootstrap4",
                 allowClear: true
             });
+
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip()
+            })
         });
     </script>
 </body>
