--- a/Assignment/Views/AddressBooks/Create.cshtml
+++ b/Assignment/Views/AddressBooks/Create.cshtml
@@ -186,7 +186,7 @@
                             console.log(obj);
                             let titleCol = '<td>' + obj.title + '</td>';
                             let addressCol = '<td>' + obj.address + '</td>';
-                            let addressTypeCol = '<td>' + obj.addressTypeId + '</td>';
+                            let addressTypeCol = '<td>' + obj.addressType.addressTypeName + '</td>';
                             let dateCol = '<td>' + obj.date + '</td>';
                             let timeCol = '<td>' + obj.time + '</td>';
                             let remarksCol = '<td>' + obj.remarks + '</td>';
